crates/swc_ecma_parser/tests/test262-error-references/fail/f51aea0352bb03f3.js.stderr
error: Invalid left-hand side in 'for...in' statement
 --> $DIR/tests/test262-parser/fail/f51aea0352bb03f3.js:1:3
  |
1 | --1
  |   ^

